test/Harper/Tests/Good/issue6_lamPat.har
value Bag a b c d = {
  data = {
    a :: a; b :: b; c :: c; d :: d;
  }
};

main = {
  extract = \Bag { a: a } => a;
  bag = val Bag { a = 1, b = 2, c = 3, d = 4 };
  return extract bag;
};