test/Harper/Tests/Bad/ConflictingFieldDeclarations.har
value Bag a b c d = {
  data = {
    a :: a; a :: b; c :: c; c :: d;
  }
};


main :: Integer;
main = 42;